Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-2446

QmlObserver asserts on shutdown (Windows)

    XMLWordPrintable

Details

    • 47696f12227e015454859302c27011561f4b44c0 1c49ee95836046f5cf2c5525ece84e40005e66e7

    Description

      QmlObserver asserts on shutdown (Windows)

      qFatal("QWidget: Must construct a QApplication before a QPaintDevice");

      the reason : QMessageBox msgBox(icon, title, text, QMessageBox::NoButton, parent);

      text = "Object::connect: No such slot QmlJSDebugger::QDeclarativeViewObserver::setInspectorContext(int) in c:\dev\creator\src\tools\qml\qmlobserver\qmlruntime.cpp:652

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kkohne Kai Köhne
            thohartm Thomas Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes