QmlObserver: Fix assert on exit (Windows)

The QApplication object in main() is already destroyed when showWarnings()
is called. Create another instance in this case.

Task-number: QTCREATORBUG-2446
Reviewed-by: Thomas Hartmann